base/022-sf-connector/fuse-022-sf-connector-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: sf-connector
  name: sf-connector
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: sf-connector
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: sf-connector
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false 
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-sf-connector:development"
          name: sf-connector
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
