base/022-sf-connector/fuse-022-sf-connector-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sf-connector
  name: sf-connector
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sf-connector
---
